--- a/renovate.json
+++ b/renovate.json
@@ -1,7 +1,7 @@
 {
     "extends": [
         "config:base",
-        "schedule:nonOfficeHours"
+        "schedule:weekends"
     ],
     "reviewers": [
         "team:cloud_backend"
