--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,8 +42,8 @@ jobs:
           go-version: 1.19
       - name: Install deps
         run: |
-          apt-get update -qq
-          apt-get install --no-install-recommends -y \
+          sudo apt-get update -qq
+          sudo apt-get install --no-install-recommends -y \
             libgstreamer1.0-dev
 
       - name: Build example
