--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,18 +14,39 @@ jobs:
         go-version:
           - 1.15
           - 1.16
+          - 1.17
+          - 1.18
+          - 1.19
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
         with:
           go-version: ${{ matrix.go-version }}
 
+      - name: Vet
+        run: go vet ./...
       - name: Test
-        run: |
-          go test ./... -v -coverprofile=cover.out -covermode atomic -coverpkg ./...
-          go vet ./...
+        run: go test ./... -v -coverprofile=cover.out -covermode atomic -coverpkg ./...
 
       - uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           file: ./cover.out
+
+  examples:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v3
+        with:
+          go-version: 1.19
+      - name: Install deps
+        run: |
+          sudo apt-get update -qq
+          sudo apt-get install --no-install-recommends -y \
+            libgstreamer1.0-dev \
+            libgstreamer-plugins-base1.0-dev
+
+      - name: Build example
+        working-directory: examples
+        run: go build ./...
