Ignore self dependency

--- a/renovate.json
+++ b/renovate.json
@@ -47,5 +47,8 @@
     }
   ],
   "ignorePaths": [],
+  "ignoreDeps": [
+    "github.com/seqsense/kinesisvideomanager"
+  ],
   "timezone": "Asia/Tokyo"
 }
