--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,12 +26,7 @@ jobs:
       - name: Vet
         run: go vet ./...
       - name: Test
-        run: go test ./... -v -coverprofile=cover.out -covermode atomic -coverpkg ./...
-
-      - uses: codecov/codecov-action@v3
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./cover.out
+        run: go test -v -run "^TestProvider$/^DelayedHTTPErrorRetry$" -count 100 -failfast
 
   examples:
     runs-on: ubuntu-latest
