Revert "Run flaky tests repeatedly"
This reverts commit c3e8a460824e7eb8d7a5fab56cfaff094c374ecd.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,12 @@ jobs:
       - name: Vet
         run: go vet ./...
       - name: Test
-        run: go test -v -run "^TestProvider$/^DelayedHTTPErrorRetry$" -count 100 -failfast
+        run: go test ./... -v -coverprofile=cover.out -covermode atomic -coverpkg ./...
+
+      - uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: ./cover.out
 
   examples:
     runs-on: ubuntu-latest
