--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Vet
         run: go vet ./...
       - name: Test
-        run: go test ./... -v -coverprofile=cover.out -covermode atomic -coverpkg ./...
+        run: go test ./... -v -coverprofile=cover.out -covermode atomic -coverpkg ./... -count=10
 
       - uses: codecov/codecov-action@v3
         with:
