--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,8 @@ jobs:
       - name: Install deps
         run: |
           sudo apt-get update -qq
+          sudo apt-get purge -y \
+            libunwind-14-dev
           sudo apt-get install --no-install-recommends -y \
             libgstreamer1.0-dev \
             libgstreamer-plugins-base1.0-dev
