--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,11 +12,12 @@ jobs:
       fail-fast: false
       matrix:
         go-version:
-          - '1.17'
-          - '1.18'
-          - '1.19'
           - '1.20'
           - '1.21'
+          - '1.22'
+          - '1.23'
+          - '1.24'
+          - '1.25'
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
@@ -39,7 +40,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: 1.25
+          go-version-file: './examples/go.mod'
       - name: Install deps
         run: |
           sudo apt-get update -qq
